--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Hero section start -->
     <div class="container">
         <div class="revealers">
             <div class="revealer r-1"></div>
@@ -73,40 +74,115 @@
                     <div class="col"></div>
                     <div class="col">
                         <div class="address">
-                            <!-- <div class="line">
-                                <p>Arc Studio</p>
-                            </div>
-                            <div class="line">
-                                <p>Arc Studio</p>
-                            </div>
-                            <div class="line">
-                                <p>Arc Studio</p>
-                            </div>
-                            <div class="line">
-                                <p>Arc Studio</p>
-                            </div> -->
+
                         </div>
                         <div class="socials">
-                            <!-- <div class="line">
-                                <p>Sayhi@arc.com</p>
-                            </div>
-                            <div class="line">
-                                <p>Instagram</p>
-                            </div>
-                            <div class="line">
-                                <p>Linkedin</p> -->
+
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
     </div>
-    <div style="width: 100vw;height: 100vh;background: #000;"></div>
-    <!-- </div> -->
+    <!-- Hero section end -->
+
+    <!-- Horizontal scroll section start -->
+    <section class="section-shared section bg-purple">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/06.webp" alt="">
+            <h1>Page title</h1>
+        </div>
+    </section>
+    <section class="section-shared section bg-teal">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/05.webp" alt="">
+            <h2>Section title</h2>
+        </div>
+    </section>
+    <section class="section-shared section bg-yellow">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/07.webp" alt="">
+            <h2>Section title</h2>
+        </div>
+    </section>
+    <section class="section-shared section bg-blue">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/08.webp" alt="">
+            <h2>Section title</h2>
+        </div>
+    </section>
+    <section class="section-shared section bg-pink">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/09.webp" alt="">
+            <h2>Section title</h2>
+        </div>
+    </section>
+    <section class="section-shared section bg-green">
+        <div class="container">
+            <img src="https://nicebarbarian.com/imgs/buildings/landscape/10.webp" alt="">
+            <h2>Section title</h2>
+        </div>
+    </section>
+    <div class="space">
+    </div>
+    <!-- Horizontal scroll section end -->
+
+
+    <!-- Greensock Horizontal scroll section start -->
+    <section class="first scroll-section">
+        <div class="outer">
+            <div class="inner">
+                <div class="bg one">
+                    <h2 class="section-heading">Scroll down</h2>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="second scroll-section">
+        <div class="outer">
+            <div class="inner">
+                <div class="bg">
+                    <h2 class="section-heading">Animated with GSAP</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="third scroll-section">
+        <div class="outer">
+            <div class="inner">
+                <div class="bg">
+                    <h2 class="section-heading">GreenSock</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="fourth scroll-section">
+        <div class="outer">
+            <div class="inner">
+                <div class="bg">
+                    <h2 class="section-heading">Animation platform</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="fifth scroll-section">
+        <div class="outer">
+            <div class="inner">
+                <div class="bg">
+                    <h2 class="section-heading">Keep scrolling</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Greensock Horizontal scroll section end -->
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/Flip.min.js"
         integrity="sha512-omCJ8S/xl+DUjxNTqvhVSptHwIEi0IDp52n63HEj8ThJgSK/8Lcpi9btnTdE8db+Y4cDKZrZ7NQZBX4PKN4i4g=="
@@ -115,6 +191,8 @@
         integrity="sha512-4a56NRIrhn/ePBdSSNfwsmL+eZt/uCXEb7s+3B8tg/tDiywDMKb5u2QCdhsYQtEkUMPGE5GUVbZYqgKeRzJ7yQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.42"></script>
+
     <script src="./script.js"></script>
 </body>
 
